--- a/fe-ukt/.env
+++ b/fe-ukt/.env
@@ -1,3 +1,4 @@
-NEXT_PUBLIC_BASE_URL = https://api.uktcabangtrenggalek.com/ukt/
+NEXT_PUBLIC_BASE_URL = http://localhost:8080/ukt/
+NEXT_PUBLIC_SERVER_URL = https://api.uktcabangtrenggalek.com/ukt/
 NEXT_PUBLIC_IMAGE_URL = http://localhost:8080/image/
 NEXT_PUBLIC_SOCKET_URL = http://localhost:8080
